maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:32: error: value ! is not a member of Boolean
  if (front && !d && g!){return 1 || 3}
                      ^Escaper:32: error: value || is not a member of Int
  if (front && !d && g!){return 1 || 3}
                                  ^